Fixed error in Laravel Talk, completed API for FoxdoxUser
